--- a/src/Common/Resources/ExceptionMessages.resx
+++ b/src/Common/Resources/ExceptionMessages.resx
@@ -45,4 +45,7 @@
     <data name="ThisCustomerAlreadyExistException" xml:space="preserve">
         <value>این مشتری قبلا ثبت شده است</value>
     </data>
+    <data name="DataNotFoundException" xml:space="preserve">
+        <value>داده یافت نشد</value>
+    </data>
 </root>
